# https://github.com/pypa/sampleproject/blob/main/pyproject.tom - look for advise

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IPErecon"
authors = [{name = "Michal Dymacek", email = "216863@vutbr.cz"}]
version = "0.0.1"
description = "Python library for SEM image segmentation"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scikit-image",
  "regex",
  "pytesseract",
  "opencv-python",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["IPErecon*"]